src/miParser.java
// Generated from C:/Users/Usuario/IdeaProjects/ProyectoScanner\miParser.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class miParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENTS=1, COMMENT_MULTI=2, COMMENT_MULTICLOSE=3, PyCOMA=4, PUNTO=5, 
		COMILLAS=6, ASSIGN=7, COMA=8, PIZQ=9, PDER=10, CUAIZQ=11, CUADER=12, CORIZQ=13, 
		CORDER=14, SUMA=15, RESTA=16, MULTIPLICACION=17, DIVISION=18, RESIDUO=19, 
		AUMENTO=20, DECREMENTO=21, OO=22, YY=23, COMP_IGUAL=24, COMP_MENOR=25, 
		COMP_MAYOR=26, COMP_DIFERENTE=27, MENOR=28, MAYOR=29, CLASS=30, IF=31, 
		WHILE=32, LET=33, THEN=34, ELSE=35, IN=36, DO=37, BEGIN=38, END=39, CONST=40, 
		VAR=41, VOID=42, BREAK=43, RETURN=44, READ=45, WRITE=46, NEW=47, NUM=48, 
		FLOAT=49, INT=50, ID=51, CHAR=52, BOOL=53, STRING=54, WS=55, PyCOM=56, 
		FOR=57, PyComa=58;
	public static final int
		RULE_program = 0, RULE_constDec1 = 1, RULE_varDec1 = 2, RULE_classDec1 = 3, 
		RULE_methodDec1 = 4, RULE_formPars = 5, RULE_type = 6, RULE_statement = 7, 
		RULE_block = 8, RULE_actPars = 9, RULE_condition = 10, RULE_condTerm = 11, 
		RULE_condFact = 12, RULE_expr = 13, RULE_term = 14, RULE_factor = 15, 
		RULE_designator = 16, RULE_relop = 17, RULE_addop = 18, RULE_mulop = 19;
	public static final String[] ruleNames = {
		"program", "constDec1", "varDec1", "classDec1", "methodDec1", "formPars", 
		"type", "statement", "block", "actPars", "condition", "condTerm", "condFact", 
		"expr", "term", "factor", "designator", "relop", "addop", "mulop"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'//'", "'/*'", "'*/'", "';'", "'.'", "'''", "'='", "','", "'('", 
		"')'", "'['", "']'", "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", "'%'", 
		"'++'", "'--'", "'||'", "'&&'", "'=='", "'<='", "'>='", "'!='", "'<'", 
		"'>'", "'class'", "'if'", "'while'", "'let'", "'then'", "'else'", "'in'", 
		"'do'", "'begin'", "'end'", "'const'", "'var'", "'void'", "'break'", "'return'", 
		"'read'", "'write'", "'new'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "COMMENTS", "COMMENT_MULTI", "COMMENT_MULTICLOSE", "PyCOMA", "PUNTO", 
		"COMILLAS", "ASSIGN", "COMA", "PIZQ", "PDER", "CUAIZQ", "CUADER", "CORIZQ", 
		"CORDER", "SUMA", "RESTA", "MULTIPLICACION", "DIVISION", "RESIDUO", "AUMENTO", 
		"DECREMENTO", "OO", "YY", "COMP_IGUAL", "COMP_MENOR", "COMP_MAYOR", "COMP_DIFERENTE", 
		"MENOR", "MAYOR", "CLASS", "IF", "WHILE", "LET", "THEN", "ELSE", "IN", 
		"DO", "BEGIN", "END", "CONST", "VAR", "VOID", "BREAK", "RETURN", "READ", 
		"WRITE", "NEW", "NUM", "FLOAT", "INT", "ID", "CHAR", "BOOL", "STRING", 
		"WS", "PyCOM", "FOR", "PyComa"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "miParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public miParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(miParser.CLASS, 0); }
		public TerminalNode ID() { return getToken(miParser.ID, 0); }
		public TerminalNode CORIZQ() { return getToken(miParser.CORIZQ, 0); }
		public TerminalNode CORDER() { return getToken(miParser.CORDER, 0); }
		public TerminalNode EOF() { return getToken(miParser.EOF, 0); }
		public List<ConstDec1Context> constDec1() {
			return getRuleContexts(ConstDec1Context.class);
		}
		public ConstDec1Context constDec1(int i) {
			return getRuleContext(ConstDec1Context.class,i);
		}
		public List<VarDec1Context> varDec1() {
			return getRuleContexts(VarDec1Context.class);
		}
		public VarDec1Context varDec1(int i) {
			return getRuleContext(VarDec1Context.class,i);
		}
		public List<ClassDec1Context> classDec1() {
			return getRuleContexts(ClassDec1Context.class);
		}
		public ClassDec1Context classDec1(int i) {
			return getRuleContext(ClassDec1Context.class,i);
		}
		public List<MethodDec1Context> methodDec1() {
			return getRuleContexts(MethodDec1Context.class);
		}
		public MethodDec1Context methodDec1(int i) {
			return getRuleContext(MethodDec1Context.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(CLASS);
			setState(41);
			match(ID);
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << CONST) | (1L << ID))) != 0)) {
				{
				setState(45);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CONST:
					{
					setState(42);
					constDec1();
					}
					break;
				case ID:
					{
					setState(43);
					varDec1();
					}
					break;
				case CLASS:
					{
					setState(44);
					classDec1();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(50);
			match(CORIZQ);
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VOID || _la==ID) {
				{
				{
				setState(51);
				methodDec1();
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			match(CORDER);
			setState(58);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstDec1Context extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(miParser.CONST, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(miParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(miParser.ASSIGN, 0); }
		public TerminalNode PyCOM() { return getToken(miParser.PyCOM, 0); }
		public TerminalNode NUM() { return getToken(miParser.NUM, 0); }
		public TerminalNode CHAR() { return getToken(miParser.CHAR, 0); }
		public ConstDec1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constDec1; }
	}

	public final ConstDec1Context constDec1() throws RecognitionException {
		ConstDec1Context _localctx = new ConstDec1Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_constDec1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(CONST);
			setState(61);
			type();
			setState(62);
			match(ID);
			setState(63);
			match(ASSIGN);
			setState(64);
			_la = _input.LA(1);
			if ( !(_la==NUM || _la==CHAR) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(65);
			match(PyCOM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDec1Context extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(miParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(miParser.ID, i);
		}
		public TerminalNode PyCOMA() { return getToken(miParser.PyCOMA, 0); }
		public List<TerminalNode> COMA() { return getTokens(miParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(miParser.COMA, i);
		}
		public VarDec1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDec1; }
	}

	public final VarDec1Context varDec1() throws RecognitionException {
		VarDec1Context _localctx = new VarDec1Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDec1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			type();
			setState(68);
			match(ID);
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(69);
				match(COMA);
				setState(70);
				match(ID);
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(PyCOMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDec1Context extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(miParser.CLASS, 0); }
		public TerminalNode ID() { return getToken(miParser.ID, 0); }
		public TerminalNode CORIZQ() { return getToken(miParser.CORIZQ, 0); }
		public TerminalNode CORDER() { return getToken(miParser.CORDER, 0); }
		public List<VarDec1Context> varDec1() {
			return getRuleContexts(VarDec1Context.class);
		}
		public VarDec1Context varDec1(int i) {
			return getRuleContext(VarDec1Context.class,i);
		}
		public ClassDec1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDec1; }
	}

	public final ClassDec1Context classDec1() throws RecognitionException {
		ClassDec1Context _localctx = new ClassDec1Context(_ctx, getState());
		enterRule(_localctx, 6, RULE_classDec1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(CLASS);
			setState(79);
			match(ID);
			setState(80);
			match(CORIZQ);
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(81);
				varDec1();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			match(CORDER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDec1Context extends ParserRuleContext {
		public TerminalNode ID() { return getToken(miParser.ID, 0); }
		public TerminalNode PIZQ() { return getToken(miParser.PIZQ, 0); }
		public TerminalNode PDER() { return getToken(miParser.PDER, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode VOID() { return getToken(miParser.VOID, 0); }
		public FormParsContext formPars() {
			return getRuleContext(FormParsContext.class,0);
		}
		public List<VarDec1Context> varDec1() {
			return getRuleContexts(VarDec1Context.class);
		}
		public VarDec1Context varDec1(int i) {
			return getRuleContext(VarDec1Context.class,i);
		}
		public MethodDec1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDec1; }
	}

	public final MethodDec1Context methodDec1() throws RecognitionException {
		MethodDec1Context _localctx = new MethodDec1Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_methodDec1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(89);
				type();
				}
				break;
			case VOID:
				{
				setState(90);
				match(VOID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(93);
			match(ID);
			setState(94);
			match(PIZQ);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(95);
				formPars();
				}
			}

			setState(98);
			match(PDER);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(99);
				varDec1();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormParsContext extends ParserRuleContext {
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(miParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(miParser.ID, i);
		}
		public List<TerminalNode> COMA() { return getTokens(miParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(miParser.COMA, i);
		}
		public FormParsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formPars; }
	}

	public final FormParsContext formPars() throws RecognitionException {
		FormParsContext _localctx = new FormParsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_formPars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			type();
			setState(108);
			match(ID);
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(109);
				match(COMA);
				setState(110);
				type();
				setState(111);
				match(ID);
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(miParser.ID, 0); }
		public TerminalNode CUAIZQ() { return getToken(miParser.CUAIZQ, 0); }
		public TerminalNode CUADER() { return getToken(miParser.CUADER, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(ID);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CUAIZQ) {
				{
				setState(119);
				match(CUAIZQ);
				setState(120);
				match(CUADER);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public DesignatorContext designator() {
			return getRuleContext(DesignatorContext.class,0);
		}
		public List<TerminalNode> PyCOMA() { return getTokens(miParser.PyCOMA); }
		public TerminalNode PyCOMA(int i) {
			return getToken(miParser.PyCOMA, i);
		}
		public TerminalNode ASSIGN() { return getToken(miParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PIZQ() { return getToken(miParser.PIZQ, 0); }
		public TerminalNode PDER() { return getToken(miParser.PDER, 0); }
		public TerminalNode AUMENTO() { return getToken(miParser.AUMENTO, 0); }
		public TerminalNode DECREMENTO() { return getToken(miParser.DECREMENTO, 0); }
		public ActParsContext actPars() {
			return getRuleContext(ActParsContext.class,0);
		}
		public TerminalNode IF() { return getToken(miParser.IF, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(miParser.ELSE, 0); }
		public TerminalNode FOR() { return getToken(miParser.FOR, 0); }
		public TerminalNode WHILE() { return getToken(miParser.WHILE, 0); }
		public TerminalNode BREAK() { return getToken(miParser.BREAK, 0); }
		public TerminalNode RETURN() { return getToken(miParser.RETURN, 0); }
		public TerminalNode PyComa() { return getToken(miParser.PyComa, 0); }
		public TerminalNode READ() { return getToken(miParser.READ, 0); }
		public TerminalNode WRITE() { return getToken(miParser.WRITE, 0); }
		public TerminalNode COMA() { return getToken(miParser.COMA, 0); }
		public TerminalNode NUM() { return getToken(miParser.NUM, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_statement);
		int _la;
		try {
			setState(190);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				designator();
				setState(133);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ASSIGN:
					{
					setState(124);
					match(ASSIGN);
					setState(125);
					expr();
					}
					break;
				case PIZQ:
					{
					setState(126);
					match(PIZQ);
					setState(128);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PIZQ) | (1L << RESTA) | (1L << NEW) | (1L << NUM) | (1L << ID) | (1L << CHAR) | (1L << BOOL))) != 0)) {
						{
						setState(127);
						actPars();
						}
					}

					setState(130);
					match(PDER);
					}
					break;
				case AUMENTO:
					{
					setState(131);
					match(AUMENTO);
					}
					break;
				case DECREMENTO:
					{
					setState(132);
					match(DECREMENTO);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(135);
				match(PyCOMA);
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				match(IF);
				setState(138);
				match(PIZQ);
				setState(139);
				condition();
				setState(140);
				match(PDER);
				setState(141);
				statement();
				setState(144);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					setState(142);
					match(ELSE);
					setState(143);
					statement();
					}
					break;
				}
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 3);
				{
				setState(146);
				match(FOR);
				{
				setState(147);
				match(PIZQ);
				setState(148);
				expr();
				setState(149);
				match(PyCOMA);
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PIZQ) | (1L << RESTA) | (1L << NEW) | (1L << NUM) | (1L << ID) | (1L << CHAR) | (1L << BOOL))) != 0)) {
					{
					setState(150);
					condition();
					}
				}

				setState(153);
				match(PyCOMA);
				setState(155);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					setState(154);
					statement();
					}
					break;
				}
				}
				setState(157);
				statement();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 4);
				{
				setState(159);
				match(WHILE);
				setState(160);
				match(PIZQ);
				setState(161);
				condition();
				setState(162);
				match(PDER);
				setState(163);
				statement();
				}
				break;
			case BREAK:
				enterOuterAlt(_localctx, 5);
				{
				setState(165);
				match(BREAK);
				setState(166);
				match(PyCOMA);
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 6);
				{
				setState(167);
				match(RETURN);
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PIZQ) | (1L << RESTA) | (1L << NEW) | (1L << NUM) | (1L << ID) | (1L << CHAR) | (1L << BOOL))) != 0)) {
					{
					setState(168);
					expr();
					}
				}

				setState(171);
				match(PyComa);
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 7);
				{
				setState(172);
				match(READ);
				setState(173);
				match(PIZQ);
				setState(174);
				designator();
				setState(175);
				match(PDER);
				setState(176);
				match(PyComa);
				}
				break;
			case WRITE:
				enterOuterAlt(_localctx, 8);
				{
				setState(178);
				match(WRITE);
				setState(179);
				match(PIZQ);
				setState(180);
				expr();
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMA) {
					{
					setState(181);
					match(COMA);
					setState(182);
					match(NUM);
					}
				}

				setState(185);
				match(PDER);
				setState(186);
				match(PyCOMA);
				}
				break;
			case CORIZQ:
				enterOuterAlt(_localctx, 9);
				{
				setState(188);
				block();
				}
				break;
			case PyCOMA:
				enterOuterAlt(_localctx, 10);
				{
				setState(189);
				match(PyCOMA);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode CORIZQ() { return getToken(miParser.CORIZQ, 0); }
		public TerminalNode CORDER() { return getToken(miParser.CORDER, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			match(CORIZQ);
			setState(196);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PyCOMA) | (1L << CORIZQ) | (1L << IF) | (1L << WHILE) | (1L << BREAK) | (1L << RETURN) | (1L << READ) | (1L << WRITE) | (1L << ID) | (1L << FOR))) != 0)) {
				{
				{
				setState(193);
				statement();
				}
				}
				setState(198);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(199);
			match(CORDER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActParsContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(miParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(miParser.COMA, i);
		}
		public ActParsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actPars; }
	}

	public final ActParsContext actPars() throws RecognitionException {
		ActParsContext _localctx = new ActParsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_actPars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(201);
			expr();
			setState(206);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(202);
				match(COMA);
				setState(203);
				expr();
				}
				}
				setState(208);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public List<CondTermContext> condTerm() {
			return getRuleContexts(CondTermContext.class);
		}
		public CondTermContext condTerm(int i) {
			return getRuleContext(CondTermContext.class,i);
		}
		public List<TerminalNode> OO() { return getTokens(miParser.OO); }
		public TerminalNode OO(int i) {
			return getToken(miParser.OO, i);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_condition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(209);
			condTerm();
			setState(214);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OO) {
				{
				{
				setState(210);
				match(OO);
				setState(211);
				condTerm();
				}
				}
				setState(216);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondTermContext extends ParserRuleContext {
		public List<CondFactContext> condFact() {
			return getRuleContexts(CondFactContext.class);
		}
		public CondFactContext condFact(int i) {
			return getRuleContext(CondFactContext.class,i);
		}
		public List<TerminalNode> YY() { return getTokens(miParser.YY); }
		public TerminalNode YY(int i) {
			return getToken(miParser.YY, i);
		}
		public CondTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condTerm; }
	}

	public final CondTermContext condTerm() throws RecognitionException {
		CondTermContext _localctx = new CondTermContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_condTerm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(217);
			condFact();
			setState(222);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==YY) {
				{
				{
				setState(218);
				match(YY);
				setState(219);
				condFact();
				}
				}
				setState(224);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondFactContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public RelopContext relop() {
			return getRuleContext(RelopContext.class,0);
		}
		public CondFactContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condFact; }
	}

	public final CondFactContext condFact() throws RecognitionException {
		CondFactContext _localctx = new CondFactContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_condFact);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(225);
			expr();
			setState(226);
			relop();
			setState(227);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
